--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\GlobalAudioLevel.cs" />
      <Compile Include="Assets\Other\Menu Animations\Menu.cs" />
      <Compile Include="Assets\Other\Menu Animations\MenuManager.cs" />
      <Compile Include="Assets\Other\Scripts\Camera\AbstractTargetFollower.cs" />
@@ -55,6 +56,7 @@
      <Compile Include="Assets\Other\Scripts\Camera\ProtectCameraFromWallClip.cs" />
      <Compile Include="Assets\Other\Scripts\Camera\TargetFieldOfView.cs" />
      <Compile Include="Assets\Other\Scripts\Enemy\EnemyLogic.cs" />
+     <Compile Include="Assets\Other\Scripts\Globals.cs" />
      <Compile Include="Assets\Other\Scripts\MainMenu\MenuShipRotation.cs" />
      <Compile Include="Assets\Other\Scripts\Particle\OrbitCamera.cs" />
      <Compile Include="Assets\Other\Scripts\Particle\TestParticles.cs" />
@@ -70,11 +72,17 @@
      <None Include="Assets\Other\Shaders\Space\Planet\Fresnel - Atmosphere.shader" />
      <None Include="Assets\Info\CameraGuidelines.txt" />
      <None Include="Assets\Models\Prefabs\Space\Asteroid\Ko je nekaj notri me pobrisi.txt" />
+ <Reference Include="UnityEngine.Advertisements">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Analytics">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="Mono.Cecil">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/Mono.Cecil.dll</HintPath>
