--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Other\Scripts\Camera\AbstractTargetFollower.cs" />
      <Compile Include="Assets\Other\Scripts\Camera\AutoCam.cs" />
      <Compile Include="Assets\Other\Scripts\Camera\HandHeldCam.cs" />
+     <Compile Include="Assets\Other\Scripts\Camera\LoadPlot.cs" />
      <Compile Include="Assets\Other\Scripts\Camera\LookatTarget.cs" />
      <Compile Include="Assets\Other\Scripts\Camera\PivotBasedCameraRig.cs" />
      <Compile Include="Assets\Other\Scripts\Camera\ProtectCameraFromWallClip.cs" />
@@ -58,10 +59,14 @@
      <Compile Include="Assets\Other\Scripts\Global\ExitGame.cs" />
      <Compile Include="Assets\Other\Scripts\Global\GlobalAudioLevel.cs" />
      <Compile Include="Assets\Other\Scripts\Global\Globals.cs" />
-     <Compile Include="Assets\Other\Scripts\Global\SceneManager.cs" />
+     <Compile Include="Assets\Other\Scripts\Global\MusicManager.cs" />
+     <Compile Include="Assets\Other\Scripts\Global\MySceneManager.cs" />
+     <Compile Include="Assets\Other\Scripts\Global\MyUnitySingleton.cs" />
+     <Compile Include="Assets\Other\Scripts\Global\Pause.cs" />
      <Compile Include="Assets\Other\Scripts\MainMenu\MenuShipRotation.cs" />
      <Compile Include="Assets\Other\Scripts\Particle\OrbitCamera.cs" />
      <Compile Include="Assets\Other\Scripts\Particle\TestParticles.cs" />
+     <Compile Include="Assets\Other\Scripts\Player\DisableInactiveParticles.cs" />
      <Compile Include="Assets\Other\Scripts\Player\ShipControls.cs" />
      <Compile Include="Assets\Other\Scripts\Player\Shooting.cs" />
      <Compile Include="Assets\Other\Scripts\Space\Asteroid\AsteroidForce.cs" />
