--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,6 +82,7 @@
      <Compile Include="Assets\Other\Scripts\Space\Asteroid\AsteroidInitiate.cs" />
      <Compile Include="Assets\Other\Scripts\Space\Asteroid\AsteroidPusher.cs" />
      <Compile Include="Assets\Other\Scripts\Space\Asteroid\AsteroidPusherInitiate.cs" />
+     <Compile Include="Assets\Other\Scripts\Space\HyperJumpOut.cs" />
      <Compile Include="Assets\Other\Scripts\Space\Nebula\NebulaCreator.cs" />
      <Compile Include="Assets\Other\Scripts\Space\Planet\Rotation.cs" />
      <Compile Include="Assets\Other\Scripts\UI\IntroControl.cs" />
